sammyaweportfolio/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Bevan&family=Roboto+Slab&display=swap');

body {
    background-color: #182339;
    font-family:'Roboto Slab',Sans-Serif;
    padding: 0;
    margin: 0;
}
h1,h2,h3,h4,h5,h6 {
    font-family: 'Bevan',Serif;
}
#content {
    max-width: 1600px; 
    margin: 0 auto;
}
nav a {
    text-align: right;
    color: #182339;
    text-decoration: none;
    padding: 60px;
    box-shadow: 5px 5px 10px #BCD3F2;
}
#hero-msg{
    grid-column: 1/2;
    grid-row: 1;
}

h2{
    margin: 0;
}

header {
    background-color: #837A34;
    display: grid;
    grid-template-columns: 1fr 1fr;

}
nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
}
nav a:hover {
    background-color: #242524;
    color: #fff;
}

#background {
    background-color: #030e11;
}
.msg {
    background-color: #837A34;
    line-height: 1.5em;
    padding: 35px;
}
footer {
    background-color: #837A34;
    color: #182339;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.home-title {
    color: #BCD3F2;
    font-size: 2em;
    margin-top: 10px;
}
.msg p {
    color: #fff;
    font-size: .8em;
    padding-bottom: 15px;
}
footer a {
    color: #182339;
    text-decoration: none;
}
footer a:hover {
    color: #fff;
    text-decoration: underline;
}
#homeimage {
    padding-top: 5px;
    justify-self: left;
    align-self: start;
}
.homeimg {
    width: 200px;
    box-shadow: 5px 5px 10px #BCD3F2;
    transition: transform .5s;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-top: 100px;
}
#hero-box {
    grid-column: 2/2;
    z-index: -1;
}
#hero-msg {
    grid-column: 1/2;
}
#hero-img {
    width: 100%;
}
.card {
    box-shadow: 0 4px 8px 0 #BCD3F2;
    transition: 0.3s;
    width: 40%;
    padding: 55px;
}
.card:hover {
    box-shadow: 0 8px 16px 0 #837A34;
}
.container {
    padding: 2px 16px;
}
.card h2 {
    color: #BCD3F2;
}
.card p {
    color: #BCD3F2;
}


footer p {
    font-size: 1.2em;
    text-decoration: none;
}
footer p a:hover {
    text-decoration: underline;
    color: #BCD3F2;
}
.social img{
    padding-top: 15px;
    height: 68px;
}
#aboutmehero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px;
}
#aboutmebox {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}
#aboutme-img {
    width: 90%;
    padding: 55px;
}
main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 55px;
}
#aboutme-msg {
    background-color: #182339;
    color: #BCD3F2;
    grid-column: 1/2;
}
p {
    grid-column: 1/2;
}
#facecard {
    grid-column: 2/2;
    padding: 60px;
    
}
#projecthero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: 100px;
}
#projectbox {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}
#project-img {
    width: 90%;
    padding: 55px;
}
#project-msg {
    background-color: #182339;
    color: #BCD3F2;
    grid-template-columns: 1fr 1fr;
    grid-column: 1/2;
    width: 100%;
    font-size: x-large;
}
#project2hero {
    grid-column: 2/2;
    padding: 40px;
    width: 100%;
}


@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title {
        font-size: 25px;
        color: #6f7364;
    }
    footer {
        margin-top: 25px;
    }
}

